--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Custom ignores
+
+/static/plots/
+/static/arrays/
+
 2# Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
