--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Custom ignores
+/static
 
-/static/plots/
-/static/arrays/
-
-2# Created by .ignore support plugin (hsz.mobi)
+# Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -170,4 +168,3 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
